--- a/bower.json
+++ b/bower.json
@@ -7,11 +7,11 @@
     "ember-load-initializers": "ember-cli/ember-load-initializers#0.1.5",
     "ember-qunit": "0.4.9",
     "ember-qunit-notifications": "0.0.7",
-    "pikaday": "~1.4.0",
     "moment": ">= 2.8.0",
     "ember-resolver": "~0.1.18",
-    "jquery": "^1.11.3",
+    "jquery": "1.11.3",
     "loader.js": "ember-cli/loader.js#3.2.1",
-    "qunit": "~1.18.0"
+    "qunit": "~1.18.0",
+    "pikaday-time": "cprussin/Pikaday#master"
   }
 }
